white-space: no wrap;  fix bottom text fall a line

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ a{
     /* background-color: blue; */
     height: 100%;        /*full height of -li-*/
     padding: 14px;
+    white-space: nowrap;
     
 }
 
